--- a/.github/workflows/sync_to_s3_generic_app.yml
+++ b/.github/workflows/sync_to_s3_generic_app.yml
@@ -14,13 +14,13 @@ on:
 
 jobs:
   build:
-    name: Setup & Build App 
+    name: Setup & Build App
     runs-on: ubuntu-latest
 
     env:
       AWS_REGION: us-west-2
       CORE_INFRA_PULUMI_STACK: passportxyz/core-infra/${{ inputs.environment }}
-      ONE_PASS_ENV: passport-xyz-${{ inputs.environment }}-env 
+      ONE_PASS_ENV: passport-xyz-${{ inputs.environment }}-env
 
     steps:
       - name: Checkout Repository
@@ -28,12 +28,12 @@ jobs:
         with:
           ref: ${{ inputs.refspec }}
 
-      - name: Set up Node.js
+      - name: Set up Node.js, version 20.9.0
         uses: actions/setup-node@v4
         with:
-          node-version: 22.14.0
+          node-version: 20.9.0
           cache: "yarn"
-      
+
       - name: Load secret
         id: op-load-secret
         uses: 1password/load-secrets-action@v1
@@ -47,12 +47,11 @@ jobs:
 
       - name: Install 1Password CLI
         uses: 1password/install-cli-action@v1
-      
+
       - name: Configure 1Password Service Account
         uses: 1password/load-secrets-action/configure@v1
         with:
           service-account-token: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-      
 
       - name: Get envs from 1Pass
         working-directory: embed-popup
@@ -60,12 +59,12 @@ jobs:
           echo "ONE_PASS_ENV=$ONE_PASS_ENV"
           op item get "$ONE_PASS_ENV" --vault "DevOps" --format json | \
           jq -r '.fields[] | select(.section.label=="app") | "\(.label)=\(.value)"' >> $GITHUB_ENV
-      
+
       - name: Install Pulumi CLI
         uses: pulumi/actions@v4
         with:
           pulumi-version: latest
-        
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -78,7 +77,7 @@ jobs:
         run: |
           BUCKET_NAME=$(pulumi stack output passportAppBucketName --stack ${{ env.CORE_INFRA_PULUMI_STACK }})
           CLOUDFRONT_ID=$(pulumi stack output passportAppistributionId --stack ${{ env.CORE_INFRA_PULUMI_STACK }})
-    
+
           if [[ -z "$BUCKET_NAME" || -z "$CLOUDFRONT_ID" ]]; then
             echo "Error: Failed to retrieve Pulumi stack outputs!"
             exit 1
@@ -86,7 +85,7 @@ jobs:
 
           echo "BUCKET_NAME=$BUCKET_NAME" >> $GITHUB_ENV
           echo "CLOUDFRONT_ID=$CLOUDFRONT_ID" >> $GITHUB_ENV
-      
+
       - name: Install Dependencies
         working-directory: .
         run: yarn install --frozen-lockfile
@@ -104,14 +103,14 @@ jobs:
 
       - name: Sync Files to S3
         working-directory: app
-        run: | 
-            if [ -d "out" ]; then
-                aws s3 sync ./out s3://${{ env.BUCKET_NAME }} --delete
-            else
-                echo "out folder not found!"
-                exit 1
-            fi
-    
+        run: |
+          if [ -d "out" ]; then
+              aws s3 sync ./out s3://${{ env.BUCKET_NAME }} --delete
+          else
+              echo "out folder not found!"
+              exit 1
+          fi
+
       - name: Create CloudFront Invalidation
         id: create_invalidation
         run: |
@@ -154,9 +153,3 @@ jobs:
 
       - name: Deployment Completed
         run: echo "Deployment and CloudFront invalidation successful!"
-
-    
-    
-    
-    
-    
