--- a/.github/workflows/release_and_deploy_production.yml
+++ b/.github/workflows/release_and_deploy_production.yml
@@ -125,6 +125,7 @@ jobs:
     secrets: inherit
 
   deploy-ui-staging:
+    # TODO (#106): remove this after deploy to S3 is final
     name: Deploy UI to Staging - Push to branch
     runs-on: ubuntu-latest
     needs: [
@@ -149,6 +150,21 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           branch: staging-app
 
+  deploy-ui-s3-staging:
+    name: Deploy UI to Review - Push to S3
+    needs: [
+        ref,
+        run-tests,
+        # check-provider-bitmap,
+        create-draft-release,
+        deploy-api-staging,
+      ]
+    uses: ./.github/workflows/sync_to_s3_generic_app.yml
+    secrets: inherit
+    with:
+      refspec: ${{ needs.ref.outputs.refspec }}
+      environment: staging
+
   deploy-embed-s3-staging:
     name: Build Embed Popup and Deploy to Staging S3
     needs: ref
@@ -157,7 +173,7 @@ jobs:
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
       environment: staging
-  
+
   deploy-api-production:
     name: Deploy API to Production
     needs: [
@@ -176,6 +192,7 @@ jobs:
     secrets: inherit
 
   deploy-ui-production:
+    # TODO (#106): remove this after deploy to S3 is final
     name: Deploy UI to Production - Push to branch
     runs-on: ubuntu-latest
     needs: [
@@ -201,6 +218,23 @@ jobs:
           commit: ${{ needs.ref.outputs.refspec }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           branch: production-app
+
+  deploy-ui-s3-production:
+    name: Deploy UI to Production - Push to S3
+    needs: [
+        ref,
+        run-tests,
+        # check-provider-bitmap,
+        create-draft-release,
+        deploy-api-staging,
+        deploy-ui-staging,
+        deploy-api-production,
+      ]
+    uses: ./.github/workflows/sync_to_s3_generic_app.yml
+    secrets: inherit
+    with:
+      refspec: ${{ needs.ref.outputs.refspec }}
+      environment: production
 
   deploy-embed-s3-production:
     name: Build Embed Popup and Deploy to Production S3
