--- a/.github/workflows/sync_to_s3_generic_push_app.yml
+++ b/.github/workflows/sync_to_s3_generic_push_app.yml
@@ -61,6 +61,20 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           aws-session-token: ${{ env.AWS_SESSION_TOKEN }}
 
+      - name: Get Pulumi Stack Outputs From Core Infra
+        id: get_pulumi_outputs
+        run: |
+          BUCKET_NAME=$(pulumi stack output passportAppBucketName --stack ${{ env.CORE_INFRA_PULUMI_STACK }})
+          CLOUDFRONT_ID=$(pulumi stack output passportAppDistributionId --stack ${{ env.CORE_INFRA_PULUMI_STACK }})
+
+          if [[ -z "$BUCKET_NAME" || -z "$CLOUDFRONT_ID" ]]; then
+            echo "Error: Failed to retrieve Pulumi stack outputs!"
+            exit 1
+          fi
+
+          echo "BUCKET_NAME=$BUCKET_NAME" >> $GITHUB_ENV
+          echo "CLOUDFRONT_ID=$CLOUDFRONT_ID" >> $GITHUB_ENV
+
       - name: Sync Files to S3
         working-directory: app
         run: |
